syntax = "proto3";


package usermgmt;

option go_package = "github.com/tech-with-moss/go-usermgmt-grpc;go_usermgmt_grpc";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc Upload(stream Chunk) returns (UploadStatus) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3; 
}

message Chunk {
  bytes Content = 1;
}

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message UploadStatus {
  string Message = 1;
  UploadStatusCode Code = 2;
}



